--- a/.editorconfig
+++ b/.editorconfig
@@ -3,7 +3,7 @@ root = true
 [*]
 charset = utf-8
 
-[*.{json,toml,yml,gyp,xml}]
+[*.{json,toml,yml,gyp,xml,txt}]
 indent_style = space
 indent_size = 2
 
